--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ navigations:
     href: /about.html
   - title: Gallery
     class: fa fa-film
-    href: http://foto.lhzhang.com
+    href: http://photography.fathhh.xyz
   - title: Subscribe
     class: fa fa-rss
     href: /atom.xml
